# OpenJPH

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_390x_big_endian  Dockerfile_alpine  Dockerfile_s390x_big_endian_ubuntu  README.md
.github/workflows/: ccp-workflow.yml  cifuzz.yml  codeql.yml  emcc.yml
docs/: usage_examples.md
src/apps/: CMakeLists.txt
src/apps/common/: ojph_img_io.h
src/apps/ojph_compress/: CMakeLists.txt  ojph_compress.cpp
src/apps/ojph_expand/: CMakeLists.txt  ojph_expand.cpp
src/apps/others/: ojph_img_io.cpp
src/core/: CMakeLists.txt
src/core/codestream/: ojph_bitbuffer_read.h  ojph_codestream.cpp  ojph_codestream_local.cpp  ojph_codestream_local.h  ojph_params.cpp  ojph_params_local.h  ojph_tile.cpp
src/core/coding/: ojph_block_decoder_ssse3.cpp  ojph_block_encoder.cpp  ojph_block_encoder_avx2.cpp
src/core/openjph/: ojph_arch.h  ojph_version.h
tests/: mse_pae.cpp  run_valgrind_ojph_compress.sh  run_valgrind_ojph_expand.sh
